--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -6,6 +6,8 @@ tags:
   - docusaurus
 sidebar_position: 2
 ---
+import ReactPlayer from 'react-player';
+
 import Tabs from '@theme/Tabs';
 
 import TabItem from '@theme/TabItem';
@@ -93,5 +95,5 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 :::
 
 ![banner](@site/static/img/CA_Banner.png)
-![video](@site/static/video/1.mp4)
+<ReactPlayer playing controls url='https://cdn.discordapp.com/attachments/816497135440625685/1255162479336755291/zS-tu-FU1KoXDtph.mp4?ex=667c20a6&is=667acf26&hm=068d20ebc68aaf67afa35646586ee8c3f34ca7ed3b488b46b3c870d119c4ba06&'/>
 ![gif](@site/static/img/ASS.gif)
