--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -1,11 +1,8 @@
----
-sidebar_position: 1
----
 import DocCardList from '@theme/DocCardList';
 
 # CAHppe Intro
 
-<iframe width="600" height="337,5" src="https://www.youtube.com/embed/NeQeA9TXIA4?si=c5O03yCJKmvvMqA8" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NeQeA9TXIA4?si=gNaoekOYeaj9Vvvq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ### ◆ Description:
 
