--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -1,7 +1,12 @@
 import DocCardList from '@theme/DocCardList';
 
 # CAHppe Intro
+:::warning
 
+**To be warning, some pages are still WIP / under construction.**
+
+:::
+___
 <iframe width="560" height="315" src="https://www.youtube.com/embed/NeQeA9TXIA4?si=gNaoekOYeaj9Vvvq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ### ◆ Description:
@@ -86,4 +91,6 @@ ___
 ___
 
 ### ◆ How to add on Unity:
-
+Click the next step!
+___
+Edited by TachDeaf
