--- a/docs/01-intro.mdx
+++ b/docs/01-intro.mdx
@@ -93,4 +93,5 @@ ___
 ### ◆ How to add on Unity:
 Click the next step!
 ___
-<div style="text-align: right"> Edited by TachDeaf </div>
+
+Edited by TachDeaf
