--- a/docs/03-Media.mdx
+++ b/docs/03-Media.mdx
@@ -1,3 +1,9 @@
+import ReactPlayer from 'react-player';
+
+import Tabs from '@theme/Tabs';
+
+import TabItem from '@theme/TabItem';
+
 :::warning
 
 ### This page is under construction.
