Remove the GIF and updating

--- a/docs/Markdown Stuff.mdx
+++ b/docs/Markdown Stuff.mdx
@@ -91,4 +91,4 @@ Some **content** with _Markdown_ `syntax`. Check [this `api`](#).
 
 ![banner](@site/static/img/CA_Banner.png)
 <ReactPlayer playing controls url='https://cdn.discordapp.com/attachments/1202970270965432403/1278305308799664149/2024-08-27_21-09-33_-_Trim.mp4?ex=66d05217&is=66cf0097&hm=6e8bbc7ea3fde1906a946f1ca601776eafb77ebf5d0aa6c97219dd18df727267&'/>
-![gif](@site/static/img/Enabled.gif)
+![gif](@site/static/img/Enabled.webp)
