finally got the twitter embed working

--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -9,10 +9,19 @@ import Tabs from '@theme/Tabs';
 
 import TabItem from '@theme/TabItem';
 
+import TwitterEmbed from '@site/src/components/TwitterEmbed';
+
+# Embedding a Tweet in MDX
+
+Check out this tweet:
+
+<TwitterEmbed tweetId="1825008386888585452" />
+
 :::warning
 
 ### This page is under construction.
 
 :::
 
-<ReactPlayer playing controls url='@static/video/2024-08-27 02-22-04.mp4' />
+<ReactPlayer playing controls url='https://www.youtube.com/watch?v=yUHxDVpMYA0'/>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Docusaurus is a new project from <a href="https://twitter.com/fbopensource?ref_src=twsrc%5Etfw">@fbOpenSource</a> team to easily manage your open source project&#39;s documentation. <a href="https://t.co/NuTdoDhe3B">https://t.co/NuTdoDhe3B</a></p>&mdash; Docusaurus (@docusaurus) <a href="https://twitter.com/docusaurus/status/941369886214778880?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
