--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -10,18 +10,70 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 import TwitterEmbed from '@site/src/components/TwitterEmbed';
+import '@site/src/components/twitterGrid.css';
 
-# Embedding a Tweet in MDX
-
-Check out this tweet:
-
-<TwitterEmbed tweetId="1825008386888585452" />
-
-:::warning
-
-### This page is under construction.
-
-:::
+here who people play with my CAHppe , they make video editer with my CAHppe. I'm so happy to see this. ♡
 
 <ReactPlayer playing controls url='https://www.youtube.com/watch?v=yUHxDVpMYA0'/>
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Docusaurus is a new project from <a href="https://twitter.com/fbopensource?ref_src=twsrc%5Etfw">@fbOpenSource</a> team to easily manage your open source project&#39;s documentation. <a href="https://t.co/NuTdoDhe3B">https://t.co/NuTdoDhe3B</a></p>&mdash; Docusaurus (@docusaurus) <a href="https://twitter.com/docusaurus/status/941369886214778880?ref_src=twsrc%5Etfw">December 14, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<ReactPlayer playing controls url='https://www.youtube.com/watch?v=YudSUTqlhZE'/>
+<ReactPlayer playing controls url='https://www.youtube.com/watch?v=2S_y0q47jPI'/>
+<ReactPlayer playing controls url='https://youtu.be/HFpFyapoKc0?si=4KpS8018agXenz4d'/>
+<ReactPlayer playing controls url='https://youtu.be/77nxcWzRjFQ?si=4nuzNzZ-32SUwPjk'/>
+
+
+<TwitterEmbed tweetId="1828278568234754503"  theme="dark"/>
+<TwitterEmbed tweetId="1791102339551768905"  theme="dark"/>
+<TwitterEmbed tweetId="1827358059808878997"  theme="dark"/>
+<TwitterEmbed tweetId="1826596308670709969"  theme="dark"/>
+<TwitterEmbed tweetId="1826031079834505420"  theme="dark"/>
+<TwitterEmbed tweetId="1826019611059564872"  theme="dark"/>
+<TwitterEmbed tweetId="1825980999739781347"  theme="dark"/>
+<TwitterEmbed tweetId="1825329967322042550"  theme="dark"/>
+<TwitterEmbed tweetId="1825008386888585452"  theme="dark"/>
+<TwitterEmbed tweetId="1824605113941635307"  theme="dark"/>
+<TwitterEmbed tweetId="1824600388303290719"  theme="dark"/>
+<TwitterEmbed tweetId="1821318853781287046"  theme="dark"/>
+<TwitterEmbed tweetId="1786132469365854517"  theme="dark"/>
+<TwitterEmbed tweetId="1785726237769433529"  theme="dark"/>
+<TwitterEmbed tweetId="1780913339377582297"  theme="dark"/>
+<TwitterEmbed tweetId="1777018507030573211"  theme="dark"/>
+<TwitterEmbed tweetId="1776339027970715839"  theme="dark"/>
+<TwitterEmbed tweetId="1773254011879104593"  theme="dark"/>
+<TwitterEmbed tweetId="1773197219593589198"  theme="dark"/>
+<TwitterEmbed tweetId="1772915901366436086"  theme="dark"/>
+<TwitterEmbed tweetId="1765178249171116497"  theme="dark"/>
+<TwitterEmbed tweetId="1764457455440871469"  theme="dark"/>
+<TwitterEmbed tweetId="1764317630377111657"  theme="dark"/>
+<TwitterEmbed tweetId="1764069045807038747"  theme="dark"/>
+<TwitterEmbed tweetId="1763854911437987904"  theme="dark"/>
+<TwitterEmbed tweetId="1763795404926108155"  theme="dark"/>
+<TwitterEmbed tweetId="1762160596475416846"  theme="dark"/>
+<TwitterEmbed tweetId="1760754716022067263"  theme="dark"/>
+<TwitterEmbed tweetId="1760598036827213857"  theme="dark"/>
+<TwitterEmbed tweetId="1760172790777541093"  theme="dark"/>
+<TwitterEmbed tweetId="1759643324636364853"  theme="dark"/>
+<TwitterEmbed tweetId="1759382382103179467"  theme="dark"/>
+<TwitterEmbed tweetId="1759179822155378729"  theme="dark"/>
+<TwitterEmbed tweetId="1758840921548902510"  theme="dark"/>
+<TwitterEmbed tweetId="1758607155605676366"  theme="dark"/>
+<TwitterEmbed tweetId="1758173162787820016"  theme="dark"/>
+<TwitterEmbed tweetId="1757940417792709048"  theme="dark"/>
+<TwitterEmbed tweetId="1757930727109272021"  theme="dark"/>
+<TwitterEmbed tweetId="1757688219448324350"  theme="dark"/>
+<TwitterEmbed tweetId="1757632099308208219"  theme="dark"/>
+<TwitterEmbed tweetId="1757250188115120500"  theme="dark"/>
+<TwitterEmbed tweetId="1757108497131467234"  theme="dark"/>
+<TwitterEmbed tweetId="1757074835136479644"  theme="dark"/>
+<TwitterEmbed tweetId="1756816671556223013"  theme="dark"/>
+<TwitterEmbed tweetId="1756349420944175265"  theme="dark"/>
+<TwitterEmbed tweetId="1755529879087407361"  theme="dark"/>
+<TwitterEmbed tweetId="1755517145771921594"  theme="dark"/>
+<TwitterEmbed tweetId="1755011435254439958"  theme="dark"/>
+<TwitterEmbed tweetId="1754684493024124952"  theme="dark"/>
+<TwitterEmbed tweetId="1754603202903736405"  theme="dark"/>
+<TwitterEmbed tweetId="1754600235467166125"  theme="dark"/>
+<TwitterEmbed tweetId="1754507932677394767"  theme="dark"/>
+<TwitterEmbed tweetId="1753812863246803259"  theme="dark"/>
+<TwitterEmbed tweetId="1753187254892183736"  theme="dark"/>
+<TwitterEmbed tweetId="1752840217612935393"  theme="dark"/>
+<TwitterEmbed tweetId="1752059713892532574"  theme="dark"/>
