--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -12,6 +12,12 @@ import TabItem from '@theme/TabItem';
 import TwitterEmbed from '@site/src/components/TwitterEmbed';
 import '@site/src/components/twitterGrid.css';
 
+:::warning
+
+### This page is under construction. (Warning, may cause lagging here.)
+
+:::
+
 here who people play with my CAHppe , they make video editer with my CAHppe. I'm so happy to see this. ♡
 
 <ReactPlayer playing controls url='https://www.youtube.com/watch?v=yUHxDVpMYA0'/>
