--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -14,7 +14,7 @@ import '@site/src/components/twitterGrid.css';
 
 :::warning
 
-### This page is under construction. (Warning, may cause lagging here.)
+### This page is under construction. (Warning, may cause lag here.)
 
 :::
 
