update new for OSC

--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -14,11 +14,11 @@ import '@site/src/components/twitterGrid.css';
 
 here who people play with my CAHppe , they make video editer with my CAHppe. I'm so happy to see this. ♡
 
-<ReactPlayer playing controls url='https://www.youtube.com/watch?v=yUHxDVpMYA0'/>
-<ReactPlayer playing controls url='https://www.youtube.com/watch?v=YudSUTqlhZE'/>
-<ReactPlayer playing controls url='https://www.youtube.com/watch?v=2S_y0q47jPI'/>
-<ReactPlayer playing controls url='https://youtu.be/HFpFyapoKc0?si=4KpS8018agXenz4d'/>
-<ReactPlayer playing controls url='https://youtu.be/77nxcWzRjFQ?si=4nuzNzZ-32SUwPjk'/>
+<ReactPlayer controls url='https://www.youtube.com/watch?v=yUHxDVpMYA0'/>
+<ReactPlayer controls url='https://www.youtube.com/watch?v=YudSUTqlhZE'/>
+<ReactPlayer controls url='https://www.youtube.com/watch?v=2S_y0q47jPI'/>
+<ReactPlayer controls url='https://youtu.be/HFpFyapoKc0?si=4KpS8018agXenz4d'/>
+<ReactPlayer controls url='https://youtu.be/77nxcWzRjFQ?si=4nuzNzZ-32SUwPjk'/>
 
 
 <TwitterEmbed tweetId="1828278568234754503"  theme="dark"/>
