--- a/docs/Media.mdx
+++ b/docs/Media.mdx
@@ -26,7 +26,7 @@ here who people play with my CAHppe , they make video editer with my CAHppe. I'm
 <ReactPlayer controls url='https://youtu.be/HFpFyapoKc0?si=4KpS8018agXenz4d'/>
 <ReactPlayer controls url='https://youtu.be/77nxcWzRjFQ?si=4nuzNzZ-32SUwPjk'/>
 
-
+<TwitterEmbed tweetId="1826651935354851775"  theme="dark"/>
 <TwitterEmbed tweetId="1828278568234754503"  theme="dark"/>
 <TwitterEmbed tweetId="1791102339551768905"  theme="dark"/>
 <TwitterEmbed tweetId="1827358059808878997"  theme="dark"/>
